Made my portrait the correct size to not be stretched

--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -9,7 +9,7 @@
   }
 
   .self-picture {
-    width: 600px;
+    width: 499px;
     height: 750px;
     margin-left: 0;
     position: relative;
@@ -35,7 +35,7 @@
       width: 80%;
     }
     .self-picture {
-      width: 300px;
+      width: 299px;
       height: 450px;
       right: 0;
       left: 15px;
